--- a/index.html
+++ b/index.html
@@ -246,19 +246,8 @@
 </div>
 
 <div class="footer centered">
-    Copyright 2016 <a href="http://dmitrybrant.com">Dmitry Brant</a>. All rights reserved.
+    Copyright &copy; 2016 <a href="http://dmitrybrant.com">Dmitry Brant</a>. All rights reserved.
 </div>
 
-
-<script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-39339602-4']);
-  _gaq.push(['_trackPageview']);
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-</script>
 </body>
 </html>
