--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset=utf-8>
 <title>FileViewer</title>
     <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400|Open Sans:400|Pacifico:400&amp;subset=latin" type="text/css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Coming%20Soon:400|Open Sans:400|Pacifico:400&amp;subset=latin" type="text/css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script>
 
