Add link to footer.

--- a/index.html
+++ b/index.html
@@ -219,11 +219,6 @@
 <body>
 
 <h1 class="centered">File Viewer</h1>
-<div id="topMenu hidden">
-    <a class="menuLink">Supported file types</a>
-    |
-    <a class="menuLink">About</a>
-</div>
 
 <div class="status centered" id="fileReaderStatus">
     Loading...
@@ -259,6 +254,7 @@
 
 <div class="footer centered">
     Copyright &copy; 2016 <a href="http://dmitrybrant.com">Dmitry Brant</a>. All rights reserved.
+    <a href="https://github.com/dbrant/fileviewer">Source code</a> on GitHub.
 </div>
 
 </body>
