--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset=utf-8>
 <title>FileViewer</title>
+    <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dancing Script:400&amp;subset=latin" type="text/css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
