Tweak output formatting.

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             var result = "<li>";
             result += "<span class='infoKey'>" + key + "</span>";
             if (value.length > 0) {
-                result += " &mdash; <span class='infoValue'>" + value + "</span>";
+                result += ": <span class='infoValue'>" + value + "</span>";
             }
             result += "</li>";
             return result;
