Add links to JSFFP.

--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
             if (format) {
                 resultStr += getKeyValueInfoItem("Detected format", format.ext.toUpperCase() + " &mdash; " + format.shortDesc);
             }
+            resultStr += getKeyValueInfoItem("Format info on <abbr title='Just Solve the File Format Problem'>JSFFP</abbr>", "<a href='http://fileformats.archiveteam.org/wiki/" + fileExt.toUpperCase() + "'>" + fileExt.toUpperCase() + "</a>");
             basicInfoDiv.html(resultStr);
         }
 
