Update license link.

--- a/index.html
+++ b/index.html
@@ -270,8 +270,7 @@
 </div>
 
 <div class="footer centered">
-    Copyright &copy; 2016 <a href="http://dmitrybrant.com">Dmitry Brant</a>. All rights reserved.
-    <a href="https://github.com/dbrant/fileviewer">Source code</a> on GitHub.
+    Copyright &copy; 2016 <a href="http://dmitrybrant.com">Dmitry Brant</a>. <a href="https://github.com/dbrant/fileviewer">Source code</a> and <a href="https://github.com/dbrant/fileviewer/blob/master/LICENSE">license</a> on GitHub.
 </div>
 
 </body>
