Update meta theme color.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset=utf-8>
-<title>FileViewer</title>
+    <meta charset=utf-8>
+    <meta name="theme-color" content="#557755" />
+    <title>FileViewer</title>
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dancing Script:400&amp;subset=latin" type="text/css" />
